--- a/index.html
+++ b/index.html
@@ -9,17 +9,52 @@
 
     <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+<!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <nav>
-        <ul>
-            <!-- ponemos data-app-link a los enlaces internos de la app para gestionar la navegación -->
-            <li><a data-app-link href="/">Inicio</a></li>
-            <li><a data-app-link href="/mi-perfil">Mi perfil</a></li>
-            <li><a data-app-link href="/nuevo-gestor">Nuevo gestor</a></li>
-        </ul>
-    </nav>
+    <nav class="navbar navbar-expand-lg bg-light">
+        <div class="container-fluid">
+          <h1 class="navbar-brand">Menu</h1>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a data-app-link class="nav-link" aria-current="page" href="/">Inicio</a>
+              </li>
+              <li class="nav-item">
+                <a data-app-link class="nav-link" aria-current="page" href="/login">Login</a>
+              </li>
+              <li class="nav-item">
+                <a data-app-link class="nav-link" href="/mi-perfil-gestor">Mi perfil (gestor)</a>
+              </li>
+              <li class="nav-item">
+                <a data-app-link class="nav-link" href="/nuevo-gestor">Nuevo gestor</a>
+              </li>
+              <li class="nav-item">
+                <a data-app-link class="nav-link" href="/mi-perfil-cliente">Mi perfil (cliente)</a>
+              </li>
+              <li class="nav-item">
+                <a data-app-link class="nav-link" href="/nuevo-cliente">Nuevo cliente</a>
+              </li>
+              <!-- <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Dropdown
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#">Action</a></li>
+                  <li><a class="dropdown-item" href="#">Another action</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                </ul>
+              </li> -->
+            </ul>
+          </div>
+        </div>
+      </nav>
 
     <!-- aquí cargamos el contenido de la página con JS -->
     <main id="contenedor-pagina"></main>
