--- a/src/vistas/mi-perfil-gestor/mi-perfil.html
+++ b/src/vistas/mi-perfil-gestor/mi-perfil.html
@@ -24,4 +24,13 @@
           </div>
         </div>
       </div>
+
+      <button id="btn-logout" class="btn btn-outline-danger">Logout</button>
+
+      <div class="alert alert-success alert-dismissible fade show m-5" role="alert" id="alertCreado" style="display: none; position: absolute; bottom: 20;">
+        <strong>Has cerrado sesión correctamente</strong>
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
 </div>
+
+
