get cliente por idGestor

--- a/src/vistas/login/login.html
+++ b/src/vistas/login/login.html
@@ -12,4 +12,8 @@
         <strong>Bienvenido!</strong>
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
+    <div class="alert alert-danger alert-dismissible fade show m-5" role="alert" id="alertError" style="display: none; position: absolute; bottom: 20;">
+        <strong>Usuario o contraseña incorrectos</strong>
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
 </div>
