--- a/src/vistas/nuevo-gestor/nuevo-gestor.html
+++ b/src/vistas/nuevo-gestor/nuevo-gestor.html
@@ -1,9 +1,9 @@
 
-<div class="m-3">
-    <h2 class="mt-3 col-12">Crear gestor</h2>
+<div class="m-3 row">
+    <h2 class="mt-3 mb-3">Crear gestor</h2>
     <br>
     
-    <section id="contenedor-nuevo-gestor">
+    <section id="contenedor-nuevo-gestor" class="col-6">
 
         <form autocomplete="ÑÖcompletes">
             <div class="mb-3">
