--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <!-- para que sea acaptable a mobile -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Banco</title>
+    <link rel="icon" type="image/x-icon" href="https://img.icons8.com/dusk/64/null/merchant-account.png">
 
     <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
@@ -33,6 +34,9 @@
               </li>
               <li class="nav-item">
                 <a data-app-link class="nav-link" href="/nuevo-gestor">Nuevo gestor</a>
+              </li>
+              <li class="nav-item">
+                <a data-app-link class="nav-link" href="/clientes">Clientes</a>
               </li>
               <li class="nav-item">
                 <a data-app-link class="nav-link" href="/mi-perfil-cliente">Mi perfil (cliente)</a>
