--- a/src/vistas/inicio/inicio.html
+++ b/src/vistas/inicio/inicio.html
@@ -1,4 +1,13 @@
-<!-- podemos añadir css -->
-<link rel="stylesheet" href="/src/vistas/inicio/inicio.css" />
 
-<h1>Esta es la página de inicio</h1>
+<!-- Header-->
+<header class="py-5">
+    <div class="container px-lg-5">
+        <div class="p-4 p-lg-5 bg-light rounded-3 text-center">
+            <div class="m-4 m-lg-5">
+                <h1 class="display-5 fw-bold">Bienvenido a la app del tu banco!</h1>
+                <p class="fs-4">Aquí podrás acceder a la plataforma de administración del banco y realizar todas las gestiones que necesitas.</p>
+                <a class="btn btn-primary btn-lg" href="/login">Login!</a>
+            </div>
+        </div>
+    </div>
+</header>
