--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+
+<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -30,7 +32,7 @@
                 <a data-app-link class="nav-link" aria-current="page" href="/login">Login</a>
               </li>
               <li class="nav-item">
-                <a data-app-link class="nav-link" href="/mi-perfil-gestor">Mi perfil (gestor)</a>
+                <a data-app-link class="nav-link" href="/mi-perfil-gestor">Mi perfil</a>
               </li>
               <li class="nav-item">
                 <a data-app-link class="nav-link" href="/nuevo-gestor">Nuevo gestor</a>
@@ -44,6 +46,9 @@
               <li class="nav-item">
                 <a data-app-link class="nav-link" href="/nuevo-cliente">Nuevo cliente</a>
               </li>
+              <i class="nav-item" style="position: absolute;right: 10px;">
+                <button class="btn btn-outline-danger" onclick="logout()">Logout</button>
+              </i>
               <!-- <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Dropdown
@@ -65,6 +70,13 @@
 
     <!-- indicamos que es tipo "module" para pode rutilizar imports -->
     <script type="module" src="./src/main.js"></script>
+
+    <script>
+      const logout = () => {
+        sessionStorage.clear();
+        window.location.href = '/'
+      }
+    </script>
 </body>
 
 </html>
