--- a/index.html
+++ b/index.html
@@ -41,10 +41,13 @@
                 <a data-app-link class="nav-link" href="/clientes">Clientes</a>
               </li>
               <li class="nav-item">
-                <a data-app-link class="nav-link" href="/mi-perfil-cliente">Mi perfil (cliente)</a>
+                <a data-app-link class="nav-link" href="/perfil-cliente">Perfil cliente</a>
               </li>
               <li class="nav-item">
                 <a data-app-link class="nav-link" href="/nuevo-cliente">Nuevo cliente</a>
+              </li>
+              <li class="nav-item">
+                <a data-app-link class="nav-link" href="/transferencias">Transferencias</a>
               </li>
               <i class="nav-item" style="position: absolute;right: 10px;">
                 <button class="btn btn-outline-danger" onclick="logout()">Logout</button>
