mensajes en proceso

--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
               <li class="nav-item">
                 <a data-app-link class="nav-link" href="/transferencias">Transferencias</a>
               </li>
+              <li class="nav-item">
+                <a data-app-link class="nav-link" href="/mensajes">Mensajes</a>
+              </li>
               <i class="nav-item" style="position: absolute;right: 10px;">
                 <button class="btn btn-outline-danger" onclick="logout()">Logout</button>
               </i>
