--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 
-<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet" />
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
 </head>
 
 <body>
@@ -25,36 +25,38 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a data-app-link class="nav-link" aria-current="page" href="/">Inicio</a>
-              </li>
-              <li class="nav-item">
-                <a data-app-link class="nav-link" aria-current="page" href="/login">Login</a>
-              </li>
-              <li class="nav-item">
-                <a data-app-link class="nav-link" href="/mi-perfil-gestor">Mi perfil</a>
-              </li>
-              <li class="nav-item">
-                <a data-app-link class="nav-link" href="/nuevo-gestor">Nuevo gestor</a>
-              </li>
-              <li class="nav-item">
-                <a data-app-link class="nav-link" href="/clientes">Clientes</a>
-              </li>
-              <li class="nav-item">
-                <a data-app-link class="nav-link" href="/perfil-cliente">Perfil cliente</a>
-              </li>
-              <li class="nav-item">
-                <a data-app-link class="nav-link" href="/nuevo-cliente">Nuevo cliente</a>
-              </li>
-              <li class="nav-item">
-                <a data-app-link class="nav-link" href="/transferencias">Transferencias</a>
-              </li>
-              <li class="nav-item">
-                <a data-app-link class="nav-link" href="/mensajes">Mensajes</a>
-              </li>
-              <i class="nav-item" style="position: absolute;right: 10px;">
-                <button class="btn btn-outline-danger" onclick="logout()">Logout</button>
-              </i>
+                <li class="nav-item">
+                  <a data-app-link class="nav-link" aria-current="page" href="/">Inicio</a>
+                </li>
+                <li class="nav-item">
+                  <a data-app-link class="nav-link" href="/mi-perfil-gestor">Mi perfil</a>
+                </li>
+                <li class="nav-item">
+                  <a data-app-link class="nav-link" href="/nuevo-gestor">Nuevo gestor</a>
+                </li>
+                <li class="nav-item">
+                  <a data-app-link class="nav-link" href="/clientes">Clientes</a>
+                </li>
+                <li class="nav-item">
+                  <a data-app-link class="nav-link" href="/perfil-cliente">Perfil cliente</a>
+                </li>
+                <li class="nav-item">
+                  <a data-app-link class="nav-link" href="/nuevo-cliente">Nuevo cliente</a>
+                </li>
+                <li class="nav-item">
+                  <a data-app-link class="nav-link" href="/transferencias">Transferencias</a>
+                </li>
+                <li class="nav-item">
+                  <a data-app-link class="nav-link" href="/mensajes">Mensajes</a>
+                </li>
+                <div class="d-flex" style="position: absolute; right: 20px">
+                  <li class="nav-item">
+                    <button data-app-link onclick="window.location.href='/login'" class="btn btn-outline-success">Login</button>
+                  </li>
+                  <li class="nav-item ms-3" style="justify-self: end;">
+                    <button class="btn btn-outline-danger" onclick="logout()">Logout</button>
+                  </li>
+                </div>
               <!-- <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Dropdown
