--- a/src/vistas/inicio/inicio.html
+++ b/src/vistas/inicio/inicio.html
@@ -6,7 +6,7 @@
             <div class="m-4 m-lg-5">
                 <h1 class="display-5 fw-bold">Bienvenido a la app del tu banco!</h1>
                 <p class="fs-4">Aquí podrás acceder a la plataforma de administración del banco y realizar todas las gestiones que necesitas.</p>
-                <a class="btn btn-primary btn-lg" href="/login">Login!</a>
+                <a class="btn btn-success btn-lg" href="/login">Login!</a>
             </div>
         </div>
     </div>
