--- a/src/vistas/mi-perfil-gestor/mi-perfil.html
+++ b/src/vistas/mi-perfil-gestor/mi-perfil.html
@@ -10,7 +10,7 @@
     <div class="card mb-3" style="max-width: 540px;">
         <div class="row g-0">
           <div class="col-md-4">
-            <img src="https://cdn.icon-icons.com/icons2/1369/PNG/512/-person_90382.png" class="img-fluid rounded-start" alt="...">
+            <img src="" class="img-fluid rounded-start" alt="Img gestor" id="imgGestor">
           </div>
           <div class="col-md-8">
             <div class="card-body">
